# discover-cloudpoint

./: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  pyproject.toml  styles.css
discover_pointcloud/: __main__.py  app.py  server.py
discover_pointcloud/frontend/: app.js  index.html  styles.css
discover_pointcloud/frontend/discover_samples/: manifest.json
discover_pointcloud/frontend/discover_samples/val_000127/: val_000127_gt.json
discover_pointcloud/frontend/discover_samples/val_000128/: val_000128_fullres1280x1088.json
discover_pointcloud/frontend/discover_samples/val_000317/: val_000317_gt.json
discover_pointcloud/frontend/discover_samples/val_000923/: val_000923_gt.json  val_000923_preproc352x640.json
discover_samples/val_000127/: val_000127_fullres1280x1088.json  val_000127_preproc352x640.json
discover_samples/val_000128/: val_000128_gt.json  val_000128_preproc352x640.json
discover_samples/val_000316/: val_000316_fullres1280x1088.json  val_000316_gt.json  val_000316_preproc352x640.json
discover_samples/val_000317/: val_000317_fullres1280x1088.json  val_000317_preproc352x640.json
discover_samples/val_000923/: val_000923_fullres1280x1088.json
electron/: main.js  preload.js
scripts/: generate_discover_samples.py  smoke_check.py  sync_python_frontend_assets.py
